# teach-a-robot

./: .gitignore  README.md
demonstration_visualizer/: CMakeLists.txt  icons.qrc  manifest.xml  tar_unstable.rosinstall
demonstration_visualizer/collision_models/: banana.xml  beijing_cup.xml  cake_mix.xml  cake_pan.xml  eggs.xml  hockey stick.xml  leicht_kitchen_island.xml  max_kitchen.xml  max_webgl_kitchen.xml  oil.xml  water_bottle.xml
demonstration_visualizer/collision_models/test_scene_1/: desk.xml  door.xml  kitchen.xml  pr2_mesh.xml  shelf.xml  sofa.xml  sports_car.xml
demonstration_visualizer/include/: demonstration_visualizer.h  visualization_helpers.h
demonstration_visualizer/include/demonstration_visualizer/: base_movement_controller.h  demonstration_scene_manager.h  demonstration_visualizer.h  demonstration_visualizer_node.h  end_effector_controller.h  goal.h  motion_recorder.h  object.h  object_manager.h  pr2_simulator.h  visualization_helpers.h
demonstration_visualizer/include/sbpl_manipulation_components/: kdl_robot_model.h
demonstration_visualizer/launch/: dviz.launch
demonstration_visualizer/meshes/: kitchen.stl
demonstration_visualizer/meshes/Scene0/banana/: banana.dae  banana.stl  doc.kml  textures.txt
demonstration_visualizer/meshes/Scene0/beijing_cup/: beijing_cup.dae  beijing_cup.stl  doc.kml  textures.txt
demonstration_visualizer/meshes/Scene0/blank_soda_can/: blank_soda_can.dae  blank_soda_can.stl  doc.kml
demonstration_visualizer/meshes/Scene0/cracker_tin/: cracker_tin.dae
demonstration_visualizer/meshes/Scene0/dining_table_and_chairs/: dining_table_and_chairs.dae  dining_table_and_chairs.stl  doc.kml
demonstration_visualizer/meshes/Scene0/kare_shelf/: doc.kml  kare_shelf.dae  textures.txt
demonstration_visualizer/meshes/Scene0/leicht_kitchen_island/: doc.kml  leicht_kitchen_island.dae  leicht_kitchen_island.stl  textures.txt
demonstration_visualizer/meshes/Scene0/planet_floor_lamp/: doc.kml  planet_floor_lamp.dae  planet_floor_lamp.stl  textures.txt
demonstration_visualizer/meshes/cake_mix/: cake_mix.skp
demonstration_visualizer/meshes/cake_pan/: Baking Pan.skp  Baking Pan~.skp  cake_pan.dae
demonstration_visualizer/meshes/desk1/: doc.kml
demonstration_visualizer/meshes/desk1/models/: untitled.dae
demonstration_visualizer/meshes/door1/: doc.kml
demonstration_visualizer/meshes/door1/models/: internaldoor.dae
demonstration_visualizer/meshes/eggs/: eggs.dae  eggs.skp
demonstration_visualizer/meshes/hockey_stick/: hockey stick.skp  hockey stick~.skp
demonstration_visualizer/meshes/oil/: oil.dae  oil.skp  oil~.skp
demonstration_visualizer/meshes/shelf1/: doc.kml
demonstration_visualizer/meshes/shelf1/models/: cabwall0.dae
demonstration_visualizer/meshes/sofa2/: doc.kml
demonstration_visualizer/meshes/water_bottle/: water_bottle.skp
demonstration_visualizer/scenes/: kitchen.xml  stl_scene.xml  test_scene_1.xml  test_scene_1_v_2.xml  test_scene_1_v_3.xml  test_scene_2.xml
demonstration_visualizer/src/: base_movement_controller.cpp  demonstration_scene_manager.cpp  demonstration_visualizer.cpp  demonstration_visualizer_node.cpp  end_effector_controller.cpp  goal.cpp  kdl_robot_model.cpp  main.cpp  motion_recorder.cpp  object.cpp  object_manager.cpp  pr2_simulator.cpp  visualization_helpers.cpp
demonstration_visualizer/tasks/: brownie_recipe.xml  kitchen.xml  test_pick_and_place_task_2.xml  test_task_1.xml  test_task_1_v_2.xml  test_task_1_v_3.xml
demonstration_visualizer/www/: index.html
demonstration_visualizer/www/scripts/: dviz.js
dviz_core/: CMakeLists.txt  manifest.xml
dviz_core/collision_models/: banana.xml  beijing_cup.xml  blank_soda_can.xml  cake_mix.xml  cake_pan.xml  cracker_tin.xml  dining_table_and_chairs.xml  eggs.xml  heineken_can.xml  hockey stick.xml  hockey_stick.xml  kare_shelf.xml  leicht_kitchen_island.xml  max_kitchen.xml  max_webgl_kitchen.xml  oil.xml  planet_floor_lamp.xml  water_bottle.xml
dviz_core/include/dviz_core/: base_carrot_controller.h  base_movement_controller.h  common.h  demonstration_scene_manager.h  demonstration_visualizer.h  demonstration_visualizer_core.h  demonstration_visualizer_user.h  end_effector_controller.h  goal.h  motion_recorder.h  object.h  object_manager.h  performance.h  pr2_simulator.h
dviz_core/launch/: dviz_headless.launch
dviz_core/msg/: CameraUpdate.msg  Goal.msg  Step.msg  Task.msg  UserDemonstration.msg  Waypoint.msg
dviz_core/scenes/: kitchen.xml  kitchen_lite.xml  stl_scene.xml  test_scene_1_v_3.xml  web_kitchen.xml
dviz_core/scripts/: joints_stats.py
dviz_core/src/: base_carrot_controller.cpp  base_movement_controller.cpp  demonstration_scene_manager.cpp  demonstration_statistics.cpp  demonstration_visualizer.cpp  demonstration_visualizer_core.cpp  demonstration_visualizer_core_node.cpp  demonstration_visualizer_node.cpp  demonstration_visualizer_user.cpp  demonstration_visualizer_user_node.cpp  end_effector_controller.cpp  goal.cpp  inspect_demonstration.cpp  motion_recorder.cpp  object.cpp  object_manager.cpp  performance.cpp  pr2_simulator.cpp  visualization_helpers.cpp
dviz_core/srv/: Command.srv
dviz_core/tasks/: brownie_recipe.xml  test_pick_and_place_task_2.xml  test_pick_place_task_1.xml  test_task_1_v_2.xml
dviz_local/: CMakeLists.txt  manifest.xml
dviz_local/include/dviz_local/: demonstration_visualizer.h  demonstration_visualizer_client.h  helpers.h
dviz_local/launch/: dviz_local.launch
dviz_local/src/: demonstration_visualizer.cpp  demonstration_visualizer_client.cpp  demonstration_visualizer_client_node.cpp  demonstration_visualizer_node.cpp
src/demonstration_visualizer/: CMakeLists.txt  package.xml
src/demonstration_visualizer/include/: base_movement_controller.h  demonstration_scene_manager.h  demonstration_visualizer.h  demonstration_visualizer_node.h  visualization_helpers.h
src/demonstration_visualizer/src/: base_movement_controller.cpp  demonstration_scene_manager.cpp  demonstration_visualizer.cpp  demonstration_visualizer_node.cpp  main.cpp  visualization_helpers.cpp
(+59 files in other folders)
