<?xml version="1.0"?>
<package>
  <name>demonstration_visualizer</name>
  <version>0.0.0</version>
  <description>The demonstration_visualizer package</description>

  <maintainer email="eratner@bowdoin.edu">Ellis Ratner</maintainer>

  <license>BSD</license>

  <author email="eratner@bowdoin.edu">Ellis Ratner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pr2_motion_recorder</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pviz</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pr2_motion_recorder</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pviz</run_depend>

  <export>

  </export>
</package>